--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
-/* Подключаем только Roboto через Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 :root {
-  /* Шрифт (только Roboto) */
   --font-primary: "Roboto", sans-serif;
 
   /* Размеры и веса шрифтов */
@@ -145,7 +143,7 @@ form button:hover {
   position: absolute;
   bottom: 0;
   left: 0;
-  right: 0; /* Чтобы занимать всю ширину карточки */
+  right: 0;
   background: rgba(0, 0, 0, 0.5);
   padding: 0.2rem 0.5rem;
   border-radius: 3px;
@@ -188,7 +186,7 @@ form button:hover {
   color: var(--color-secondary);
 }
 
-/* 8. Адаптивные стили (для мобильных) */
+/* 8. Адаптивные стили (для мобильных устройств) */
 @media (max-width: 600px) {
   .navbar {
     flex-direction: column;
